[package]
name = "actix-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dotenv = "0.15.0"
chrono = "0.4.23"
serde = { version = "1.0.130", features = ["derive"] }
bcrypt = "0.13"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
jsonwebtoken = "8"
futures = "0.3.17"

rust-s3 = "0.27.0-rc4"
actix-multipart = "0.4.0"
actix-web = "4"
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", version = "0.1.0" }

